--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
 	--color-subtle-top: #ddfbff;
 
 	/* Todo: convert to a gradient for borders? */
-	--colors-border-bold: var(--color-bold-bottom);
+	--colors-border-bold: var(--color-bold-top);
 
 	--colors-background-bold: linear-gradient(
 		to bottom,
@@ -42,6 +42,12 @@
 
 html,
 body {
+	max-width: 100vw;
+	overflow-x: hidden;
+	height: 100%;
+}
+
+body {
 	background: linear-gradient(
 		to bottom,
 		var(--color-subtle-top) 0%,
@@ -49,9 +55,6 @@ body {
 		var(--color-background) 90%,
 		var(--color-subtle-bottom) 100%
 	);
-	max-width: 100vw;
-	overflow-x: hidden;
-	height: 100%;
 }
 
 a {
