--- a/src/components/ResultDisplay.module.css
+++ b/src/components/ResultDisplay.module.css
@@ -1,7 +1,28 @@
-.resultDisplay {
-	margin-top: 2rem;
+.estimates {
+	list-style-type: none;
+	display: flex;
+	gap: 1rem;
+	flex-direction: column;
+	margin-top: 1rem;
 }
 
-.resultDisplay h3 {
-	margin-bottom: 1rem;
+.p {
+	text-align: center;
+}
+
+.error {
+	max-height: 35rem;
+	max-width: 50rem;
+	border: 1px solid var(--color-foreground);
+	padding: 1rem;
+	overflow: auto;
+}
+
+.section {
+	margin: 3rem 0 1.5rem;
+}
+
+.subHeading {
+	margin-bottom: 2rem;
+	text-align: center;
 }
