Fancy colorings and dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,12 @@
 	--color-foreground: #073535;
 	--color-foreground-bold: #142121;
 	--color-foreground-accent: #122c22;
+	--color-bold-behind: #1ebcc5;
 	--color-bold-bottom: #0e4c3c;
 	--color-bold-top: #09949c;
 	--color-subtle-bottom: #e9fff2;
 	--color-subtle-top: #ddfbff;
+	--color-text-shadow: rgba(0, 7, 7, 0.25);
 
 	/* Todo: convert to a gradient for borders? */
 	--colors-border-bold: var(--color-bold-top);
@@ -32,6 +34,21 @@
 	--font-size-small: 1rem;
 
 	--font-weight-hero: 900;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--color-background: #000707;
+		--color-foreground: #c0ffff;
+		--color-foreground-bold: #86dbdb;
+		--color-foreground-accent: #5ce1ae;
+		--color-bold-behind: #108187;
+		--color-bold-bottom: #10bfc8;
+		--color-bold-top: #64ffd8;
+		--color-subtle-bottom: #01140d;
+		--color-subtle-top: #011d22;
+		--color-text-shadow: rgba(255, 245, 245, 0.25);
+	}
 }
 
 * {
@@ -59,7 +76,19 @@ body {
 
 a {
 	color: inherit;
+	display: inline-block;
+	position: relative;
 	text-decoration: none;
+}
+
+a::before {
+	content: "";
+	width: 100%;
+	height: 1px;
+	background: var(--color-bold-behind);
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
 
 @media (prefers-color-scheme: dark) {
