--- a/src/components/OptionsForm.module.css
+++ b/src/components/OptionsForm.module.css
@@ -47,7 +47,7 @@
 .inputPrimary,
 .inputSecondary {
 	background: var(--color-background);
-	border: 1px solid var(--colors-border-bold);
+	border: 1px solid var(--color-bold-top);
 	bottom: 1px;
 	left: 1px;
 	right: 1px;
