--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,7 +3,7 @@ Todo: I'll probably switch this to rainbow-sprinkles, pending...
 https://github.com/wayfair/rainbow-sprinkles/issues/148
 */
 
-.main {
+main.main {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
@@ -31,7 +31,7 @@ https://github.com/wayfair/rainbow-sprinkles/issues/148
 	margin-top: 0.5rem;
 }
 
-.footer {
+footer.footer {
 	color: var(--color-bold-bottom);
 	margin: clamp(5rem, 7.5vw, 7.5rem) auto 2.5rem;
 	text-align: center;
