--- a/src/components/OptionsForm.module.css
+++ b/src/components/OptionsForm.module.css
@@ -48,6 +48,7 @@
 	background: var(--color-background);
 	border: 1px solid var(--color-bold-top);
 	bottom: 1px;
+	color: inherit;
 	left: 1px;
 	right: 1px;
 	top: 1px;
