--- a/src/components/ScrollButton.module.css
+++ b/src/components/ScrollButton.module.css
@@ -1,14 +1,13 @@
 .scrollButton {
 	position: fixed;
-	bottom: 5;
-	right: 5;
+	bottom: 40px;
+	right: 40px;
 	background: var(--colors-background-bold);
 	border-radius: 4px;
 	border-radius: var(--border-radius-large);
 	border: none;
 	color: var(--color-background);
 	cursor: pointer;
-	/* display: flex; */
 	font-weight: bold;
 	justify-content: center;
 	padding: 0.5rem 0.75rem;
