--- a/src/components/ScrollButton.module.css
+++ b/src/components/ScrollButton.module.css
@@ -16,11 +16,15 @@
 	text-decoration: none;
 	text-shadow: 0 0 5px var(--color-shadow);
 	z-index: 1;
-	display: none;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s linear 0.35s, opacity 0.35s linear;
 }
 
 .visible {
-	display: flex;
+	visibility: visible;
+	opacity: 1;
+	transition-delay: 0s;
 }
 
 @media screen and (width <= 870px) {
