toggle for asc and desc affecting all buttons rather than just active button

--- a/src/components/ResultDisplay.module.css
+++ b/src/components/ResultDisplay.module.css
@@ -28,6 +28,16 @@
 	padding: 1rem;
 	overflow: auto;
 }
+
+.sortWidget {
+	background: none;
+	color: #1ebcc5;
+}
+
 .isActive {
-	background-color: red;
+	color: red;
+}
+
+.isDescending {
+	transform: rotate(180deg);
 }
