--- a/src/components/ResultDisplay.module.css
+++ b/src/components/ResultDisplay.module.css
@@ -32,23 +32,23 @@
 }
 
 .sortWidget {
-	background-clip: padding-box, border-box;
-	background-image: linear-gradient(
-			var(--color-foreground),
-			var(--color-foreground)
-		),
-		var(--colors-foreground-bold);
-	background-origin: border-box;
-	border-radius: var(--border-radius-large);
-	border: double 1px transparent;
-	bottom: 1px;
-	color: inherit;
+	background-color: transparent;
+	border-width: 0;
+	font-family: inherit;
+	font-size: inherit;
+	font-style: normal;
+	font-weight: inherit;
+	line-height: inherit;
 	padding-left: 0.5em;
 	padding-right: 0.5em;
+	transition: transform 0.05s ease-out;
+}
+.theSpan {
+	color: aqua;
 }
 
 .isActive {
-	color: red;
+	text-shadow: #fc0 1px 0 10px;
 }
 
 .isDescending {
