--- a/src/components/ResultDisplay.module.css
+++ b/src/components/ResultDisplay.module.css
@@ -34,21 +34,14 @@
 .sortWidget {
 	background-color: transparent;
 	border-width: 0;
-	font-family: inherit;
-	font-size: inherit;
-	font-style: normal;
-	font-weight: inherit;
-	line-height: inherit;
 	padding-left: 0.5em;
 	padding-right: 0.5em;
 	transition: transform 0.05s ease-out;
-}
-.theSpan {
-	color: aqua;
+	color: var(--color-foreground);
 }
 
 .isActive {
-	text-shadow: #fc0 1px 0 10px;
+	text-shadow: var(--color-foreground) 1px 0 10px;
 }
 
 .isDescending {
