--- a/src/components/ScrollButton.module.css
+++ b/src/components/ScrollButton.module.css
@@ -10,6 +10,7 @@
 	color: var(--color-background);
 	cursor: pointer;
 	font-weight: bold;
+	font-family: inherit;
 	justify-content: center;
 	padding: 0.5rem 0.75rem;
 	text-align: center;
