feat: make filter options collapsible

--- a/src/components/OptionsForm.module.css
+++ b/src/components/OptionsForm.module.css
@@ -138,3 +138,16 @@
 	height: 2rem;
 	padding: 0.5rem;
 }
+
+.toggleButton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: none;
+	border: none;
+	padding: 0;
+	margin: 0;
+	font: inherit;
+	color: inherit;
+	cursor: pointer;
+}
