feat: make filter options collapsible (#815)
<!-- 👋 Hi, thanks for sending a PR to tidelift-me-up-site! 💖.
Please fill out all fields below and make sure each item is true and [x]
checked.
Otherwise we may not be able to review your PR. -->

## PR Checklist

- [x] Addresses an existing open issue: fixes #5 
- [x] That issue was marked as [`status: accepting
prs`](https://github.com/JoshuaKGoldberg/tidelift-me-up-site/issues?q=is%3Aopen+is%3Aissue+label%3A%22status%3A+accepting+prs%22)
- [x] Steps in
[CONTRIBUTING.md](https://github.com/JoshuaKGoldberg/tidelift-me-up-site/blob/main/.github/CONTRIBUTING.md)
were taken

## Overview

<!-- Description of what is changed and how the code change does that.
-->
Previously, the filter options were always visible and could not be
collapsed.

Now, the filter options can be collapsed, and the behavior is as
follows:
- By default, the filter options are visible when the site loads:
<img width="411" alt="filter-options-visible"
src="https://github.com/user-attachments/assets/a545f2e9-990a-4720-8e87-00c90d9e69e8">

- Users can toggle the filter options open and closed by clicking on the
"Filter options by v" button:
<img width="391" alt="filter-options-hidden"
src="https://github.com/user-attachments/assets/67f7f7b0-f247-4e08-ab7b-350331402ea3">

- The filter options automatically close when a search is submitted:
<img width="385" alt="search-results"
src="https://github.com/user-attachments/assets/dfc2060c-5f10-4870-85e2-46141378b263">

Lastly, another fav emoji of mine: 🌱!

--- a/src/components/OptionsForm.module.css
+++ b/src/components/OptionsForm.module.css
@@ -106,6 +106,7 @@
 .secondaryOptions {
 	flex-direction: column;
 	gap: 3rem;
+	margin-top: 1.25rem;
 }
 
 @media screen and (width >= 700px) {
@@ -137,4 +138,18 @@
 	border-radius: var(--border-radius-medium);
 	height: 2rem;
 	padding: 0.5rem;
+}
+
+.optionsSummary {
+	align-items: center;
+	cursor: pointer;
+	display: flex;
+	font-style: italic;
+	gap: 4px;
+	justify-content: center;
+	list-style: none;
+}
+
+.optionsDetails[open] .chevronIcon {
+	transform: rotate(180deg);
 }
